--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
 @import './global.scss';
 
 .goodFace__slider {
-  padding: 120px 0 0 0;
+  padding: 200px 0;
 }
 .goodFace__slider-top {
   margin-bottom: 72px;
@@ -101,6 +101,9 @@
   &::after, &::before {
     background: #E8E8E9;
   }
+  &:hover {
+    border: 2px solid #E8E8E9;
+  }
 }
 .goodFace__slider-bottom {
   img {
@@ -110,17 +113,26 @@
   margin-bottom: 56px;
 }
 .slider-bottom__item {
-  
+  display: flex !important;
+  justify-content: space-between;
 }
 .slider-bottom-text {
+  max-width: 380px;
   h2 {
     font-weight: 500;
     font-size: 32px;
+    padding-bottom: 16px;
   }
   p {
     font-size: 16px;
     line-height: 26px;
   }
+}
+.slideCounter {
+  float: right;
+  margin-top: 10px;
+  font-size: 16px;
+  opacity: 0.4;
 }
 .footer {
 }
