--- a/scss/global.scss
+++ b/scss/global.scss
@@ -24,23 +24,6 @@ header,
 aside {
   display: block;
 }
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  min-width: 320px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  -webkit-tap-highlight-color: transparent;
-  font-family: TT Norms;
-  overflow-x: hidden;
-}
 input,
 button,
 textarea {
@@ -85,8 +68,22 @@ h6 {
   font-size: inherit;
   font-weight: inherit;
 }
+html,
 body {
- 
+  height: 100%;
+  width: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 14px;
+  min-width: 320px;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  -webkit-tap-highlight-color: transparent;
+  font-family: TT Norms;
+  overflow-x: hidden;
+  color: #14171A;
 }
 .container {
   max-width: 712px;
