--- a/scss/global.scss
+++ b/scss/global.scss
@@ -82,10 +82,16 @@ body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
   font-family: TT Norms;
-  overflow-x: hidden;
-  color: #14171A;
+  overflow: hidden;
+  color: #14171a;
 }
+
 .container {
   max-width: 712px;
   margin: 0 auto;
+  padding: 0 10px;
 }
+
+$blue: #0054a6;
+$black: #14171a;
+$grey:  #e8e8e9
