--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,7 +1,7 @@
-@import './global.scss';
+@import "./global.scss";
 
 .goodFace__slider {
-  padding: 200px 0;
+  padding-top: 200px;
 }
 .goodFace__slider-top {
   margin-bottom: 72px;
@@ -11,11 +11,15 @@
     position: absolute;
     top: 40%;
     height: 2px;
-    background: #000;
+    background: $black;
     width: 100vw;
     z-index: -1;
   }
 }
+.slick-track {
+  display: flex;
+}
+
 .slider-top__item {
   img {
     margin: 8px 0;
@@ -35,26 +39,22 @@
     height: 72px;
   }
 }
-.slick-track {
-  display: flex;
-}
 .slick-list {
   overflow: hidden;
 }
 .slick-arrow {
   position: absolute;
   top: 8px;
-  right: 1px;
   font-size: 0;
-  width: 56px;
+  width: 58px;
   height: 56px;
-  border: 2px solid #14171A;
   background: #fff;
-  z-index: 10;
-  transition: .3s ease 0s;
+  transition: 0.3s ease 0s;
+  border: 2px solid $black;
 }
 .slick-prev,
 .slick-next {
+  border: 2px solid $black;
   &::after,
   &::before {
     content: "";
@@ -62,13 +62,14 @@
     left: 40%;
     width: 14px;
     height: 3px;
-    background: #14171A;
+    background: $black;
   }
   &:hover {
-    border: 2px solid #0054A6;
+    border: 2px solid $blue;
   }
 }
 .slick-prev {
+  z-index: 10 !important;
   right: 56px;
   &::after,
   &::before {
@@ -80,6 +81,9 @@
   }
   &::before {
     transform: rotate(45deg);
+  }
+  &:hover {
+    border-left: 2px solid $blue;
   }
 }
 .slick-next {
@@ -95,17 +99,32 @@
     top: 54%;
     transform: rotate(45deg);
   }
+  &:hover {
+    border-right: 2px solid $blue;
+  }
 }
-.slick-disabled {
-  border: 2px solid #E8E8E9;
-  &::after, &::before {
-    background: #E8E8E9;
+.disabled-slick {
+  border: 2px solid $grey;
+  &::after,
+  &::before {
+    background: $grey;
   }
   &:hover {
-    border: 2px solid #E8E8E9;
+    border: 2px solid $grey;
   }
 }
 .goodFace__slider-bottom {
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 30%;
+    height: 2px;
+    background: $black;
+    width: 100vw;
+    z-index: -1;
+    display: none;
+  }
   img {
     width: 300px;
     height: 206px;
@@ -114,14 +133,16 @@
 }
 .slider-bottom__item {
   display: flex !important;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .slider-bottom-text {
   max-width: 380px;
+  padding-right: 10px;
   h2 {
-    font-weight: 500;
     font-size: 32px;
     padding-bottom: 16px;
+    font-weight: 600;
   }
   p {
     font-size: 16px;
@@ -134,13 +155,15 @@
   font-size: 16px;
   opacity: 0.4;
 }
-.footer {
+.footer .slideCounter {
+  display: none;
 }
 .footer__title {
   font-size: 20px;
-  padding-right: 48px;
+  font-weight: 600;
   position: relative;
-  margin-bottom: 16px;
+  padding-bottom: 16px;
+  overflow-x: hidden;
   &::after,
   &::before {
     content: "";
@@ -148,11 +171,10 @@
   }
   &::after {
     height: 1px;
-    width: 474px;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #e8e8e9;
+    width: 100%;
+    left: 238px;
+    top: 10px;
+    background:$grey;
   }
   &::before {
     background: url("../img/flagUkraine.svg") 0 0 no-repeat;
@@ -167,3 +189,5 @@
     line-height: 26px;
   }
 }
+
+@import "./media.scss";
