--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,3 +1,5 @@
+@import './global.scss';
+ 
 @media (max-width: 700px) {
   .container {
     padding-left: 24px;
@@ -51,3 +53,4 @@
     }
   }
 }
+
