--- a/scss/media.scss
+++ b/scss/media.scss
@@ -1,5 +1,5 @@
-@import './global.scss';
- 
+@import "./global.scss";
+
 @media (max-width: 700px) {
   .container {
     padding-left: 24px;
@@ -53,4 +53,3 @@
     }
   }
 }
-
