--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,13 +48,11 @@
   width: 56px;
   height: 56px;
   background: #fff;
-  transition: 0.3s ease 0s;
+  transition: .3s ease 0s;
   &:not(.disabled-slick):hover {
     border: 2px solid $blue;
     z-index: 5;
-    &::after {
-      background: $blue;
-    }
+    &::after,
     &::before {
       background: $blue;
     }
@@ -72,6 +70,7 @@
     width: 14px;
     height: 3px;
     background: $black;
+    transition: .1s ease 0s;
   }
 }
 .slick-prev {
@@ -80,15 +79,18 @@
   &::before {
     transform-origin: left;
   }
+  &:active {
+    &::after,
+    &::before {
+      left: 35%;
+    }
+  }
   &::after {
     top: 54%;
     transform: rotate(-45deg);
   }
   &::before {
     transform: rotate(45deg);
-  }
-  &:hover {
-    
   }
 }
 .slick-next {
@@ -105,8 +107,11 @@
     top: 54%;
     transform: rotate(45deg);
   }
-  &:hover {
-    
+  &:active {
+    &::after,
+    &::before {
+      left: 45%;
+    }
   }
 }
 .disabled-slick {
@@ -115,6 +120,12 @@
   &::after,
   &::before {
     background: $grey;
+  }
+  &:hover {
+    &::after,
+    &::before {
+      left: 40%;
+    }
   }
 }
 .goodFace__slider-bottom {
@@ -178,7 +189,7 @@
     width: 100%;
     left: 238px;
     top: 10px;
-    background:$grey;
+    background: $grey;
   }
   &::before {
     background: url("../img/flagUkraine.svg") 0 0 no-repeat;
