--- a/scss/global.scss
+++ b/scss/global.scss
@@ -82,7 +82,7 @@ body {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   -webkit-tap-highlight-color: transparent;
   font-family: TT Norms;
-  overflow: hidden;
+  overflow-x: hidden;
   color: #14171a;
 }
 
