--- a/scss/global.scss
+++ b/scss/global.scss
@@ -83,6 +83,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   font-family: TT Norms;
   overflow-x: hidden;
+  overflow-y: auto;
   color: #14171a;
 }
 
