--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,7 +133,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 30%;
+    top: 15%;
     height: 2px;
     background: $black;
     width: 100vw;
@@ -144,7 +144,7 @@
     width: 300px;
     height: 206px;
   }
-  margin-bottom: 56px;
+  margin-bottom: 32px;
 }
 .slider-bottom__item {
   display: flex !important;
@@ -172,6 +172,9 @@
 }
 .footer .slideCounter {
   display: none;
+}
+.footer {
+  margin-top: 32px;
 }
 .footer__title {
   font-size: 20px;
